Fixing the number overflow in summary box

--- a/style.css
+++ b/style.css
@@ -288,13 +288,6 @@ a:hover {
         font-size: 20px;
         margin-bottom: 15px;
     }
-
-    .data-display table {
-        display: block;
-        overflow-x: auto;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-    }
 }
 
 @media screen and (max-width:480px) {
